- show the pointer cursor on the stopwatch title (when its not on focus) - fix, issue where the options window might be below the next stopwatch (set some z-index) - reduce the title placeholder text

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,11 @@
     min-height: 1em;
     }
 
+.StopWatch-title:not(:focus)
+    {
+    cursor: pointer;
+    }
+
 .StopWatch-count
     {
     padding: 0 15px;
@@ -189,6 +194,7 @@
 
     padding: 5px;
     border-radius: 5px;
+    z-index: 10;    /* so its always above the rest of the elements */
     }
 
 .Options-close
